<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juancrud.evaluacion.MainActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_nombre"/>

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_below="@+id/etNombre"
        android:layout_marginTop="@dimen/margin_small"/>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_below="@id/etFecha"
        android:hint="@string/hint_telefono"
        android:layout_marginTop="@dimen/margin_small"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/etTelefono"
        android:hint="@string/hint_email"
        android:layout_marginTop="@dimen/margin_small"/>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:hint="@string/hint_descripcion"
        android:inputType="textMultiLine"
        android:lines="2"
        android:minLines="2"
        android:layout_marginTop="@dimen/margin_small"/>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_siguiente"
        android:onClick="siguiente"/>

</RelativeLayout>
